--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -100,11 +100,33 @@ blockquote {
     background-color: rgba(66, 185, 131, .1);
 }
 
-pre {
+/* pre {
     padding: 2rem 1rem 1rem 1rem !important;
     border-radius: 0.35rem;
     tab-size: 4;
+} */
+/* 给代码块开启行号 */
+pre {
+    padding: 1.5rem 1.5rem 1.5rem 3.3rem !important;
+    margin: 1rem 0 !important;
+    background: #272822;
+    overflow: auto;
+    border-radius: 0.35rem;
+    tab-size: 4;
 }
+/* https://blog.csdn.net/weixin_45453133/article/details/120853394?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522166713229116800182775816%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=166713229116800182775816&biz_id=&utm_medium=distribute.pc_search_result.none-task-code-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-120853394-0-null-null.142^v62^pc_search_tree,201^v3^control_1,213^v1^control&utm_term=matery%E4%B8%BB%E9%A2%98%E7%BB%99%E4%BB%A3%E7%A0%81%E5%9D%97%E5%BC%80%E5%90%AF%E8%A1%8C%E5%8F%B7 */
+.line-numbers-rows {
+    border-right-width: 0px !important;
+}
+.line-numbers {
+    padding: 1.5rem 1.5rem 1.5rem 3.5rem !important;
+    margin: 1rem 0 !important;
+    background: #272822;
+    overflow: auto;
+    border-radius: 0.35rem;
+    tab-size: 4;
+}
+
 
 .code-area::after {
     content: " ";
@@ -124,7 +146,7 @@ code {
     padding: 1px 5px;
     top: 13px !important;
     font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
-    font-size: 0.91rem;
+    /* font-size: 0.91rem; */
     color: #e96900;
     background-color: #f8f8f8;
     border-radius: 2px;
@@ -2137,4 +2159,26 @@ footer .copy-right {
     height: 50px;
     padding: 0;
     margin: 0;
+}
+
+
+/* 滚动条 */
+::-webkit-scrollbar-thumb {
+    background-color: #0ee1b3;
+    background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,.4) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.4) 50%,rgba(255,255,255,.4) 75%,transparent 75%,transparent);
+    border-radius: 3em;
+}
+::-webkit-scrollbar-track {
+    background-color: rgb(218, 202, 255);
+    border-radius: 3em;
+}
+::-webkit-scrollbar {
+    width: 8px;
+    height: 15px;
+}
+/* 解决底部总浏览量和访问人数总是隐藏 */
+#busuanzi_container_site_pv,
+#busuanzi_value_site_pv,
+#busuanzi_container_site_uv{
+   display: inline !important;
 }
